Added custom shared components and feedback form

--- a/src/components/AppAboutUs/AppAboutUs.html
+++ b/src/components/AppAboutUs/AppAboutUs.html
@@ -5,4 +5,6 @@
     They can't pass a bookstore without going in and getting something, they keep a library card and use it.
     They are allergic to cheap bestsellers; they delight in the out-of-the-way and the rare, the well-made and the hard-to-accomplish. They take care of their books; they  know a book is only theirs until it passes on to someone else. They are good stewards of a timeless object.
     These are the people we're working for.
+
+    <FeedbackForm></FeedbackForm>
 </div>
