Added names of each component and fixed radio label syntax error

--- a/src/components/FeedbackForm/FeedbackForm.html
+++ b/src/components/FeedbackForm/FeedbackForm.html
@@ -1,9 +1,11 @@
 <div>
-    <Input/>
-    <Select></Select>
-    <RadioGroup>
-        <Radio></Radio>
-        <Radio></Radio>
-    </RadioGroup>
-    <Checkbox></Checkbox>
+    <ui-input></ui-input>
+    <ui-select>
+        <option value="dffd"></option>
+    </ui-select>
+    <ui-radio-group>
+        <ui-radio></ui-radio>
+        <ui-radio></ui-radio>
+    </ui-radio-group>
+    <ui-checkbox></ui-checkbox>
 </div>
