--- a/src/components/shared/form-controls/Radio/Radio.html
+++ b/src/components/shared/form-controls/Radio/Radio.html
@@ -3,6 +3,6 @@
 
       <label class="slds-radio__label" v-bind="attributes" :for="id">
         <span class="slds-radio_faux"></span>
-        <span class="slds-form-element__label" v-if="label && label.length">{{ label }}}</span>
+        <span class="slds-form-element__label" v-if="label && label.length">{{ label }}</span>
       </label>
 </span>
