Added adding new book, refactored shared components

--- a/src/components/AppHeader/AppHeader.html
+++ b/src/components/AppHeader/AppHeader.html
@@ -4,7 +4,7 @@
     </div>
     <div>
         <router-link :to="{ name: 'home'}">
-            <button>Books</button>
+            <button>Available books</button>
         </router-link>
         <router-link :to="{ name: 'aboutUs'}">
             <button>About project</button>
